# coach

./: .env  .gitignore  Cargo.toml  Procfile  README.md  config.yaml.example
.github/workflows/: rust.yml
examples/: time_validation_report.csv
scripts/: create_migration.sh  init_db.sh
src/: config.rs  controller.rs  lib.rs  main.rs  model.rs  repository.rs
storage/migrations/: 00000_meet_entries.sql  00001_entries_loads.sql  00002_meets.sql  00003_import_history.sql  00004_swimmer_time_source.sql  00005_meet_course.sql  0002_meets.sql
templates/: entries.html  index.html  layout.html  meet.html  meet_form.html  meets.html  results.html  swimmers.html
