[package]
name = "coach"
version = "0.1.0"
authors = ["Hildeberto Mendonca <me@hildeberto.com>"]
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
config = "0.14.0"
lazy_static = "1.4.0"
tera = "1"
chrono = { version = "0.4.24",  features = ["serde"] }
serde =  { version = "1.0.197", features = ["derive"] }
sqlx =   { version = "0.7.3",   features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
tokio =  { version = "1.36.0",  features = ["macros", "rt-multi-thread"] }