[package]
name        = "coach"
description = "GeekSwimmers for Coaches"
version     = "0.1.0"
authors     = ["Hildeberto Mendonca <me@hildeberto.com>"]
edition     = "2021"

[dependencies]
actix-files     = "0.6.5"
actix-multipart = "0.6.1"
actix-web       = "4.5.1"
config          = "0.14.0"
csv             = "1.3.0"
env_logger      = "0.11.3"
lazy_static     = "1.4.0"
log             = "0.4.21"
regex           = "1.10.4"
scraper         = "0.19.0"
tera            = "1.19.1"
chrono = { version = "0.4.38",  features = ["serde"] }
serde  = { version = "1.0.200", features = ["derive"] }
sqlx   = { version = "0.7.4",   features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
tokio  = { version = "1.37.0",  features = ["macros", "rt-multi-thread"] }